--- a/README
+++ b/README
@@ -15,3 +15,6 @@ examples
         the token and the verifies the existence of the resources
         in Google Storage.
         
+TODO
+    -   Handle captcha
+    -   Can we pipeline the entire process with coroutines?
